# homeassistant-opcua

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yaml
custom_components/opcua/: __init__.py  binary_sensor.py  const.py  manifest.json  sensor.py  services.yaml  switch.py
custom_components/opcua/translations/: en.json
