[project]
name = "homeassistant-opcua"
version = "0.1.3"
description = "OPCUA Client for HomeAssistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncua>=1.1.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "homeassistant>=2023.7.3",
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
]

[tool.isort]
profile = "black"
